--- a/index.html
+++ b/index.html
@@ -307,6 +307,9 @@
       width: 300px;
       border-radius: 10px;
       color: white;
+      border: 2px solid #2c2c2c;
+      transition: all 0.3s ease;
+      box-shadow: 0 0 10px rgba(255, 0, 0, 0.1);
     }
 
     .card h3 {
