--- a/index.html
+++ b/index.html
@@ -312,6 +312,13 @@
       box-shadow: 0 0 10px rgba(255, 0, 0, 0.1);
     }
 
+    .card:hover {
+      border: 2px solid red;
+      box-shadow: 0 0 25px 5px rgba(255, 0, 0, 0.6);
+      transform: scale(1.03);
+    }
+
+
     .card h3 {
       color: red;
     }
