--- a/index.html
+++ b/index.html
@@ -269,7 +269,8 @@
     .stats-card:hover {
       box-shadow: 0 0 20px rgba(255, 0, 0, 0.7);
       cursor: pointer;
-      border: 2px solid red; /* додаємо червону обводку */
+      border: 2px solid red;
+      transform: scale(1.05);
     }
 
     .services, .gallery {
