--- a/index.html
+++ b/index.html
@@ -256,7 +256,7 @@
     .stats-card {
       margin: 10px;
       padding: 20px;
-      background-color: #1a1a1a;
+      background-color: #1c1c1c;
       border: 2px solid #2c2c2c;
       border-radius: 10px;
       width: 200px;
