--- a/index.html
+++ b/index.html
@@ -280,6 +280,7 @@
 
     /* НОВА РАМКА ДЛЯ ЗАГОЛОВКА */
     .services-header {
+      background-color: #1c1c1c;
       border: 2px solid #444;
       padding: 20px;
       max-width: 800px;
@@ -287,7 +288,6 @@
       border-radius: 10px;
       box-shadow: 0 4px 10px rgba(255, 0, 0, 0.1);
       transition: box-shadow 0.3s ease, border-color 0.3s ease;
-      text-align: center;
     }
 
     .services-header:hover {
