--- a/index.html
+++ b/index.html
@@ -414,14 +414,17 @@
       <div class="card">
         <h3>ПУЛЬТОВА ОХОРОНА КВАРТИР</h3>
         <p>Гарантія своєчасного виявлення і нейтралізації загроз</p>
+        <div class="details-diamond">Детальніше</div>
       </div>
       <div class="card">
         <h3>ОСОБИСТА ОХОРОНА (VIP)</h3>
         <p>Ми впораємось з будь-якою ситуацією</p>
+        <div class="details-diamond">Детальніше</div>
       </div>
       <div class="card">
         <h3>ПРОТИПОЖЕЖНА ОХОРОНА</h3>
         <p>Комплекс послуг з впровадження систем протипожежного захисту</p>
+        <div class="details-diamond">Детальніше</div>
       </div>
     </div>
   </section>
