--- a/index.html
+++ b/index.html
@@ -331,6 +331,28 @@
       margin: 10px;
     }
 
+    .details-diamond {
+      margin-top: 15px;
+      background: #ff1e1e;
+      color: white;
+      font-size: 0.9rem;
+      padding: 10px 0;
+      width: 120px;
+      text-align: center;
+      text-transform: uppercase;
+      clip-path: polygon(50% 0%, 100% 50%, 50% 100%, 0% 50%);
+      margin-left: auto;
+      margin-right: auto;
+      cursor: pointer;
+      transition: background 0.3s ease, transform 0.3s ease;
+    }
+
+    .details-diamond:hover {
+      background: #cc0000;
+      transform: scale(1.05);
+    }
+
+
     @media (max-width: 768px) {
       nav {
         flex-wrap: wrap;
