--- a/index.html
+++ b/index.html
@@ -332,24 +332,23 @@
     }
 
     .details-diamond {
-      margin-top: 15px;
-      background: #ff1e1e;
+      display: inline-block;
+      background: #555;
       color: white;
       font-size: 0.9rem;
-      padding: 10px 0;
-      width: 120px;
-      text-align: center;
+      padding: 10px 40px;
+      text-decoration: none;
       text-transform: uppercase;
-      clip-path: polygon(50% 0%, 100% 50%, 50% 100%, 0% 50%);
-      margin-left: auto;
-      margin-right: auto;
+      clip-path: polygon(15% 0%, 85% 0%, 100% 50%, 85% 100%, 15% 100%, 0% 50%);
+      margin-top: 15px;
+      white-space: nowrap;
       cursor: pointer;
-      transition: background 0.3s ease, transform 0.3s ease;
+      user-select: none;
+      transition: background 0.3s ease;
     }
 
     .details-diamond:hover {
-      background: #cc0000;
-      transform: scale(1.05);
+      background: #ff1e1e;
     }
 
 
