--- a/index.html
+++ b/index.html
@@ -345,6 +345,7 @@
       cursor: pointer;
       user-select: none;
       transition: background 0.3s ease;
+      align-self: center; /* Вирівнювання по центру в картці */
     }
 
     .details-diamond:hover {
