--- a/index.html
+++ b/index.html
@@ -1,306 +1,34 @@
 <!DOCTYPE html>
 <html lang="uk">
 <head>
-  <meta charset="UTF-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
-  <title>Підрозділ швидкого реагування ТИГР</title>
-  <link rel="icon" href="Tiger logo.png" type="image/x-icon">
-  <link href="https://fonts.googleapis.com/css2?family=Russo+One&display=swap" rel="stylesheet">
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>Послуги</title>
   <style>
     body {
+      font-family: Arial, sans-serif;
+      background-color: #121212;
       margin: 0;
-      font-family: 'Russo One', sans-serif;
-      background-color: #0b0b0b;
+      padding: 0;
+    }
+
+    .services {
+      text-align: center;
+      padding: 50px 20px;
       color: white;
-      letter-spacing: 3px;
-      padding-top: 70px;
     }
 
-    header {
-      position: fixed;
-      top: 0;
-      left: 0;
-      width: 100%;
-      background-color: rgba(0, 0, 0, 0.5);
-      backdrop-filter: blur(8px);
-      display: flex;
-      align-items: center;
-      justify-content: center;
-      padding: 10px 20px;
-      box-sizing: border-box;
-      z-index: 1000;
-    }
-
-    .header-content {
-      display: flex;
-      align-items: center;
-      max-width: 1200px;
-      width: 100%;
-    }
-
-    .logo {
-      height: 40px;
-      margin-right: 20px;
-      flex-shrink: 0;
-      user-select: none;
-    }
-
-    nav {
-      display: flex;
-      justify-content: center;
-      flex: 1;
-      gap: 15px;
-    }
-
-    nav a {
-      color: white;
-      text-decoration: none;
-      font-size: 1rem;
-      white-space: nowrap;
-      transition: color 0.3s ease;
-      cursor: pointer;
-      font-weight: normal;
-    }
-
-    nav a:hover {
+    .services h2 {
+      font-size: 2rem;
+      margin-bottom: 40px;
       color: #ff1e1e;
-    }
-
-    .btn {
-      transition: transform 0.3s ease;
-    }
-
-    .btn:hover {
-      transform: scale(1.07);
-    }
-
-    .phone-diamond {
-      display: inline-block;
-      background: #555;
-      color: white;
-      font-size: 0.9rem;
-      padding: 10px 40px;
-      text-decoration: none;
-      text-transform: uppercase;
-      clip-path: polygon(15% 0%, 85% 0%, 100% 50%, 85% 100%, 15% 100%, 0% 50%);
-      margin-left: 20px;
-      white-space: nowrap;
-      cursor: pointer;
-      position: relative;
-      user-select: none;
-    }
-
-    .phone-diamond:hover {
-      background: #ff1e1e;
-    }
-
-    .copied-tooltip {
-      position: absolute;
-      top: 100%;
-      left: 50%;
-      transform: translateX(-50%);
-      background-color: rgba(0, 0, 0, 0.85);
-      padding: 5px 10px;
-      border: 2px solid #000;
-      border-radius: 5px;
-      font-size: 0.85rem;
-      opacity: 0;
-      transition: all 0.3s ease;
-      pointer-events: none;
-      z-index: 9999;
-      margin-top: 6px;
-    }
-
-    .show-tooltip {
-      opacity: 1;
-    }
-
-    .city-banner {
-      background-color: #1a1a1a;
-      color: #ffffff;
-      text-align: center;
-      padding: 15px 20px;
-      font-size: 2.5rem;
-      letter-spacing: 2px;
-      box-shadow: 0 4px 10px rgba(255, 0, 0, 0.3);
-      z-index: 900;
-    }
-
-    .hero {
-      background: #111;
-      padding: 60px 40px;
-      display: flex;
-      justify-content: center;
-      align-items: center;
-      gap: 60px;
-      flex-wrap: wrap;
-    }
-
-    .hero-content {
-      max-width: 450px;
-      display: flex;
-      flex-direction: column;
-      align-items: center;
-      text-align: center;
-      position: relative;
-    }
-
-    .hero-title p {
-      font-size: 2.5rem;
-      margin: 5px 0;
-    }
-
-    .hex-btn {
-      margin-top: 20px;
-      display: inline-block;
-      background: #ff1e1e;
-      color: white;
-      font-size: 1rem;
-      padding: 12px 50px;
-      text-decoration: none;
-      text-transform: uppercase;
-      clip-path: polygon(15% 0%, 85% 0%, 100% 50%, 85% 100%, 15% 100%, 0% 50%);
-    }
-
-    .hex-btn:hover {
-      background: #cc0000;
-    }
-
-    .hero-content p:last-child {
-      margin-top: 10px;
-      cursor: default;
-      transition: all 0.3s ease;
-    }
-
-    .hero-content p strong {
-      font-weight: bold;
-      cursor: pointer;
-      transition: color 0.3s ease;
-    }
-
-    #phone-number:hover {
-      color: #ff1e1e;
-    }
-
-    .hero-image {
-      position: relative;
-      display: inline-block;
-      perspective: 1000px;
-    }
-
-    .hero-image::before {
-      content: "";
-      position: absolute;
-      top: 50%;
-      left: 50%;
-      transform: translate(-50%, -50%);
-      width: 110%;
-      height: 130%;
-      background: radial-gradient(circle, rgba(255, 0, 0, 0.3) 0%, transparent 70%);
-      z-index: 0;
-      pointer-events: none;
-    }
-
-    .hero-image img {
-      position: relative;
-      z-index: 1;
-      max-width: 600px;
-      width: 100%;
-      height: auto;
-      border-radius: 10px;
-      object-fit: contain;
-      transition: transform 0.3s ease;
-      will-change: transform;
-    }
-
-    .stats {
-      padding: 40px 20px;
-      background: #141414;
-      text-align: center;
-    }
-
-    .stats-header {
-      margin: 0 auto 30px auto;
-      text-align: center;
-      background-color: #1a1a1a;
-      border: 2px solid #2c2c2c;
-      border-radius: 10px;
-      padding: 20px;
-      box-shadow: 0 4px 10px rgba(0, 0, 0, 0.4);
-      max-width: 1000px;
-      transform-style: preserve-3d;
-      transition: box-shadow 0.3s ease, border-color 0.3s ease;
-    }
-
-    .stats-header:hover {
-      box-shadow: 0 0 25px 5px rgba(255, 0, 0, 0.7);
-      border-color: red;
-    }
-
-    .stats-header h2 {
-      margin: 0;
-      color: #ff0000;
-      font-size: 1.8rem;
-      letter-spacing: 2px;
-      cursor: default;
-    }
-
-    .stats-row {
-      display: flex;
-      justify-content: center;
-      flex-wrap: wrap;
-      gap: 20px;
-      margin-top: 20px;
-    }
-
-    .stats-card {
-      margin: 10px;
-      padding: 20px;
-      background-color: #1c1c1c;
-      border: 2px solid #2c2c2c;
-      border-radius: 10px;
-      width: 200px;
-      box-shadow: 0 4px 10px rgba(0, 0, 0, 0.4);
-      transition: transform 0.2s ease, box-shadow 0.2s ease;
-      transform-style: preserve-3d;
-      will-change: transform;
-    }
-
-    .stats-card:hover {
-      box-shadow: 0 0 20px rgba(255, 0, 0, 0.7);
-      cursor: pointer;
-      border: 2px solid red;
-      transform: scale(1.05);
-    }
-
-    .services, .gallery {
-      padding: 60px 20px;
-      text-align: center;
-    }
-
-    /* НОВА РАМКА ДЛЯ ЗАГОЛОВКА */
-    .services-header {
-      background-color: #1c1c1c;
-      border: 2px solid #444;
-      padding: 20px;
-      max-width: 800px;
-      margin: 0 auto 30px auto;
-      border-radius: 10px;
-      box-shadow: 0 4px 10px rgba(255, 0, 0, 0.1);
-      transition: box-shadow 0.3s ease, border-color 0.3s ease;
-    }
-
-    .services-header:hover {
-      box-shadow: 0 0 25px 5px rgba(255, 0, 0, 0.7);
-      border-color: red;
     }
 
     .cards {
       display: flex;
       justify-content: center;
       flex-wrap: wrap;
-      gap: 20px;
-      margin-top: 30px;
+      gap: 30px;
     }
 
     .card {
@@ -312,137 +40,69 @@
       border: 2px solid #2c2c2c;
       transition: all 0.3s ease;
       box-shadow: 0 0 10px rgba(255, 0, 0, 0.1);
+
+      /* Додаємо вирівнювання контенту */
+      display: flex;
+      flex-direction: column;
+      justify-content: space-between;
+      height: 340px;
     }
 
     .card:hover {
-      border: 2px solid red;
-      box-shadow: 0 0 25px 5px rgba(255, 0, 0, 0.6);
       transform: scale(1.03);
+      border-color: #ff1e1e;
+      box-shadow: 0 0 20px rgba(255, 0, 0, 0.2);
     }
-
 
     .card h3 {
-      color: red;
+      font-size: 1.2rem;
+      margin-bottom: 15px;
+      color: #ff1e1e;
     }
 
-    .gallery img {
-      width: 200px;
-      border-radius: 10px;
-      margin: 10px;
+    .card p {
+      font-size: 1rem;
+      margin-bottom: 20px;
+      flex-grow: 1;
     }
 
     .details-diamond {
-      display: inline-block;
       background: #555;
       color: white;
       font-size: 0.9rem;
       padding: 10px 40px;
-      text-decoration: none;
       text-transform: uppercase;
       clip-path: polygon(15% 0%, 85% 0%, 100% 50%, 85% 100%, 15% 100%, 0% 50%);
-      margin-top: 15px;
+      text-align: center;
       white-space: nowrap;
       cursor: pointer;
       user-select: none;
       transition: background 0.3s ease;
-      align-self: center; /* Вирівнювання по центру в картці */
+      margin: 0 auto;
     }
 
     .details-diamond:hover {
       background: #ff1e1e;
     }
-
-
-    @media (max-width: 768px) {
-      nav {
-        flex-wrap: wrap;
-        justify-content: center;
-      }
-
-      nav a {
-        margin: 5px 10px;
-      }
-
-      .hero {
-        flex-direction: column;
-        padding: 40px 20px;
-        gap: 30px;
-      }
-
-      .hero-image img {
-        max-width: 100%;
-      }
-
-      .phone-diamond {
-        display: none;
-      }
-    }
   </style>
 </head>
 <body>
-  <header>
-    <div class="header-content">
-      <img src="Tiger logo.png" alt="Логотип ТИГР" class="logo" />
-      <nav>
-        <a href="#about" class="btn">Про нас</a>
-        <a href="#services" class="btn">Послуги</a>
-        <a href="#news" class="btn">Новини</a>
-        <a href="#gallery" class="btn">Галерея</a>
-        <a href="#contact" class="btn">Контакти</a>
-        <a href="#sales" class="btn">Акції</a>
-      </nav>
-      <div style="position: relative;">
-        <a class="phone-diamond btn" id="header-phone">0800-30-47-74</a>
-        <div id="header-tooltip" class="copied-tooltip">Скопійовано!</div>
-      </div>
-    </div>
-  </header>
 
-  <div class="city-banner">Хмельницький</div>
-
-  <section class="hero">
-    <div class="hero-content">
-      <div class="hero-title">
-        <p>ПІДРОЗДІЛ</p>
-        <p>ШВИДКОГО</p>
-        <p>РЕАГУВАННЯ</p>
-      </div>
-      <a class="hex-btn btn" href="#form">ЗАЛИШИТИ ЗАЯВКУ</a>
-      <p>Або зателефонуйте <strong id="phone-number">0800-30-47-74</strong></p>
-      <div id="tooltip" class="copied-tooltip">Скопійовано!</div>
-    </div>
-    <div class="hero-image">
-      <img src="Copilot_20250803_164540.png" alt="Охоронна компанія ТИГР">
-    </div>
-  </section>
-
-  <section class="stats">
-    <div class="stats-header">
-      <h2>ЧОМУ НАС ОБИРАЮТЬ</h2>
-    </div>
-    <div class="stats-row">
-      <div class="stats-card"><h2>13 РОКІВ</h2><p>Досвід роботи</p></div>
-      <div class="stats-card"><h2>15000+</h2><p>Клієнтів</p></div>
-      <div class="stats-card"><h2>5000+</h2><p>Об'єктів під охороною</p></div>
-      <div class="stats-card"><h2>24/7</h2><p>Моніторинг та реагування</p></div>
-    </div>
-  </section>
-
-  <section class="services" id="services">
-    <div class="services-header">
-      <h2>МИ НАДАЄМО ШИРОКИЙ ВИБІР ПОСЛУГ</h2>
-    </div>
+  <section class="services">
+    <h2>Наші Послуги</h2>
     <div class="cards">
       <div class="card">
         <h3>ПУЛЬТОВА ОХОРОНА КВАРТИР</h3>
         <p>Гарантія своєчасного виявлення і нейтралізації загроз</p>
         <div class="details-diamond">Детальніше</div>
       </div>
+
       <div class="card">
         <h3>ОСОБИСТА ОХОРОНА (VIP)</h3>
         <p>Ми впораємось з будь-якою ситуацією</p>
         <div class="details-diamond">Детальніше</div>
       </div>
+
       <div class="card">
         <h3>ПРОТИПОЖЕЖНА ОХОРОНА</h3>
         <p>Комплекс послуг з впровадження систем протипожежного захисту</p>
@@ -451,52 +111,5 @@
     </div>
   </section>
 
-  <section class="gallery" id="gallery">
-    <h2>ГАЛЕРЕЯ</h2>
-    <div>
-      <img src="guard1.jpg" alt="Охоронець">
-      <img src="guard2.jpg" alt="ТИГР екіпірування">
-      <img src="car1.jpg" alt="Машина TIGR">
-      <img src="badge.jpg" alt="Логотип TIGR">
-    </div>
-  </section>
-
-  <script>
-    function copyToClipboard(text, tooltip) {
-      navigator.clipboard.writeText(text).then(() => {
-        tooltip.classList.add('show-tooltip');
-        setTimeout(() => tooltip.classList.remove('show-tooltip'), 1500);
-      });
-    }
-
-    const phoneNumber = document.getElementById('phone-number');
-    const tooltip = document.getElementById('tooltip');
-    phoneNumber.addEventListener('click', () => {
-      copyToClipboard(phoneNumber.textContent, tooltip);
-    });
-
-    const headerPhone = document.getElementById('header-phone');
-    const headerTooltip = document.getElementById('header-tooltip');
-    headerPhone.addEventListener('click', () => {
-      copyToClipboard(headerPhone.textContent, headerTooltip);
-    });
-
-    // 3D ефект для hero-image при наведенні
-    const heroImage = document.querySelector('.hero-image img');
-    const heroContainer = document.querySelector('.hero-image');
-
-    heroContainer.addEventListener('mousemove', (e) => {
-      const rect = heroContainer.getBoundingClientRect();
-      const x = e.clientX - rect.left - rect.width / 2;
-      const y = e.clientY - rect.top - rect.height / 2;
-      const rotateX = (-y / (rect.height / 2)) * 60;
-      const rotateY = (x / (rect.width / 2)) * 60;
-      heroImage.style.transform = `rotateX(${rotateX}deg) rotateY(${rotateY}deg)`;
-    });
-
-    heroContainer.addEventListener('mouseleave', () => {
-      heroImage.style.transform = 'rotateX(0) rotateY(0)';
-    });
-  </script>
 </body>
 </html>
