--- a/index.html
+++ b/index.html
@@ -450,15 +450,39 @@
     </div>
   </section>
 
-  <section class="gallery" id="gallery">
-    <h2>ГАЛЕРЕЯ</h2>
-    <div>
-      <img src="guard1.jpg" alt="Охоронець">
-      <img src="guard2.jpg" alt="ТИГР екіпірування">
-      <img src="car1.jpg" alt="Машина TIGR">
-      <img src="badge.jpg" alt="Логотип TIGR">
+  <section class="reviews" id="reviews">
+    <div class="services-header">
+      <h2>Що про нас говорять клієнти</h2>
+      <p style="font-size: 2rem; color: #ff1e1e; margin-top: 10px;">5.0</p>
+    </div>
+    <div class="cards">
+      <div class="card">
+        <h3>Етнографічний фестиваль “Маланка-фест”</h3>
+        <p>Висловлюємо подяку підрозділу швидкого реагування «Тигр» за професійне забезпечення безпеки під час Фестивалю Маланок, який відбувся у Чернівцях.<br>Завдяки вашій оперативності та високому рівню організації учасники та гості події могли насолоджуватися святом без жодних занепокоєнь.</p>
+      </div>
+      <div class="card">
+        <h3>“Bla bla bar”</h3>
+        <p>Відколи ми почали працювати з охоронною компанією «Тигр» наші заклади стали ще безпечнішими. Команда “Тигр” працює злагоджено та професійно. Високий рівень професіоналізму та здатність діяти швидко – це те, що ми шукали в охоронній компанії. Завдяки системі відеоспостереження 24/7 ми завжди знаємо, що все під контролем та всі в цілковитій безпеці.</p>
+      </div>
+      <div class="card">
+        <h3>Якобишен Даніель Заклади STREET</h3>
+        <p>Спеціалізована охоронна служба “ТИГР” вражає своєю професійністю та бездоганною виконавчою дисципліною. Хочу зауважити про їх високий стандарт безпеки та невтомну готовність до забезпечення безпеки. Завдяки бездоганній роботі “Тигру” ми маємо впевненість у надійності нашого захисту та можемо довіряти їм у найважливіші моменти.</p>
+      </div>
+      <div class="card">
+        <h3>Пекарня-кондитерська Рецептура</h3>
+        <p>Задоволені співпрацею з компанією “ТИГР”.<br>Договір уклали швидко, у випадку потреби – реагують швидко та допомагають у вирішенні проблем!</p>
+      </div>
+      <div class="card">
+        <h3>Автентичний простір краси Iv.Art</h3>
+        <p>Сплю спокійно, бо знаю, що хлопці з Тигру охороняють мій простір краси всю ніч.<br>Всім раджу, хто ще вагається!</p>
+      </div>
+      <div class="card">
+        <h3>Мережа закладів піцерій ШО-ШО</h3>
+        <p>З охоронною компанією “ТИГР” ми співпрацюємо вже не один рік і з впевненістю можемо зазначити, .</p>
+      </div>
     </div>
   </section>
+
 
   <script>
     function copyToClipboard(text, tooltip) {
