--- a/index.html
+++ b/index.html
@@ -377,18 +377,16 @@
 
     .reviews-grid {
       display: grid;
-      grid-template-columns: repeat(auto-fit, minmax(280px, 1fr));
+      grid-template-columns: repeat(3, 1fr);
       gap: 20px;
-      justify-content: center; /* щоб блоки не розтягувались */
+      margin-top: 20px;
     }
     
-    .reviews .cards {
-      display: grid;
-      grid-template-columns: repeat(3, 300px); /* 3 вузькі колонки по 300px */
-      gap: 20px;
-      justify-content: center; /* центрує групу колонок на широких екранах */
-      align-items: start;
-      margin-top: 20px;
+    .review-card {
+      background: #fff;
+      border-radius: 10px;
+      padding: 15px;
+      box-shadow: 0 2px 8px rgba(0,0,0,0.1);
     }
     
     .review-card h3 {
@@ -401,7 +399,6 @@
       font-size: 0.95rem;
       line-height: 1.4;
     }
-
 
     @media (max-width: 768px) {
       nav {
