--- a/index.html
+++ b/index.html
@@ -375,6 +375,14 @@
       font-size: 2rem;
     }
 
+    .reviews {
+      display: grid;
+      grid-template-columns: repeat(auto-fill, minmax(300px, 1fr));
+      gap: 20px;
+      margin-top: 30px;
+    }
+
+
 
     @media (max-width: 768px) {
       nav {
@@ -481,6 +489,7 @@
       <span>★</span>
     </div>
   </div>
+    <div class="reviews">
       <div class="card">
         <h3>Етнографічний фестиваль “Маланка-фест”</h3>
         <p>Висловлюємо подяку підрозділу швидкого реагування «Тигр» за професійне забезпечення безпеки під час Фестивалю Маланок, який відбувся у Чернівцях.<br>Завдяки вашій оперативності та високому рівню організації учасники та гості події могли насолоджуватися святом без жодних занепокоєнь.</p>
