--- a/index.html
+++ b/index.html
@@ -375,9 +375,9 @@
       font-size: 2rem;
     }
 
-    .reviews {
+   .reviews {
       display: grid;
-      grid-template-columns: repeat(auto-fill, minmax(300px, 1fr));
+      grid-template-columns: repeat(3, 1fr); /* рівно 3 колонки */
       gap: 20px;
       margin-top: 30px;
     }
