--- a/index.html
+++ b/index.html
@@ -383,6 +383,16 @@
       margin: 30px auto 0 auto; /* по центру контейнера */
     }
 
+    .reviews-section {
+      background-color: #1a1a1a;
+      padding: 40px 20px;
+      max-width: 1000px;
+      margin: 30px auto;
+      border-radius: 10px;
+      border: 2px solid #2c2c2c;
+      box-shadow: 0 4px 10px rgba(0, 0, 0, 0.4);
+    }
+
 
 
     @media (max-width: 768px) {
