--- a/index.html
+++ b/index.html
@@ -384,7 +384,7 @@
     }
 
     .reviews-section {
-      background-color: #1a1a1a;
+      background-color: #141414;
       padding: 40px 20px;
       width: 100vw; /* або width: 100%; */
       margin: 30px 0; /* прибрати авто, щоб не було центрування з обмеженням */
