--- a/index.html
+++ b/index.html
@@ -404,6 +404,13 @@
       padding: 0 20px; /* щоб був відступ з боків */
     }
 
+    .services-header h2,
+    .reviews-section .services-header h2 {
+      color: red;
+      font-weight: bold;
+    }
+
+
 
 
 
