--- a/index.html
+++ b/index.html
@@ -515,7 +515,7 @@
   <section class="reviews-section">
     <div class="container">
       <div class="services-header">
-        <h2>Що про нас говорять клієнти</h2>
+        <h2>ЩО ПРО НАС ГОВОРЯТЬ КЛІЄНТИ</h2>
         <div class="rating">
           <p>5.0</p>
           <span>★</span>
