--- a/index.html
+++ b/index.html
@@ -288,6 +288,7 @@
       border-radius: 10px;
       box-shadow: 0 4px 10px rgba(255, 0, 0, 0.1);
       transition: box-shadow 0.3s ease, border-color 0.3s ease;
+      justify-content: center !important;
     }
 
     .services-header:hover {
