--- a/index.html
+++ b/index.html
@@ -405,10 +405,17 @@
       padding: 0 20px; /* щоб був відступ з боків */
     }
 
-    .services-header h2,
-    .reviews-section .services-header h2 {
-      color: red;
-      font-weight: bold;
+    .services-header {
+      display: flex;
+      align-items: center;
+      justify-content: space-between; /* щоб заголовок і рейтинг розташувались по боках */
+      flex-wrap: wrap;
+    }
+    
+    .reviews-section .services-header {
+      display: flex;
+      align-items: center;
+      justify-content: space-between; /* спеціально для секції відгуків */
     }
 
 
