--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
       backdrop-filter: blur(8px);
       display: flex;
       align-items: center;
-      justify-content: center;
+      justify-content: space-between;
       padding: 10px 20px;
       box-sizing: border-box;
       z-index: 1000;
@@ -37,6 +37,14 @@
       max-width: 1200px;
       width: 100%;
     }
+
+    .logo img {
+      width: 40px;      /* розмір логотипу */
+      height: 40px;
+      border-radius: 50%; /* круглий */
+      cursor: pointer;     /* показує, що можна клікнути */
+    }
+
 
     .logo {
       height: 40px;
