--- a/index.html
+++ b/index.html
@@ -493,7 +493,7 @@
       </div>
       <div class="logo">
         <a href="profile.html">
-            <img src="user-logo.png" alt="Профіль користувача">
+            <img src="logo profil.png" alt="Профіль користувача">
         </a>
       </div>
     </div>
