--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
       backdrop-filter: blur(8px);
       display: flex;
       align-items: center;
-      justify-content: space-between;
+      justify-content: center;
       padding: 10px 20px;
       box-sizing: border-box;
       z-index: 1000;
