--- a/index.html
+++ b/index.html
@@ -34,6 +34,7 @@
     .header-content {
       display: flex;
       align-items: center;
+      justify-content: space-between; /* Розташовує елементи по краях */
       max-width: 1200px;
       width: 100%;
     }
