--- a/index.html
+++ b/index.html
@@ -479,22 +479,31 @@
 <body>
   <header>
     <div class="header-content">
-      <img src="Tiger logo.png" alt="Логотип ТИГР" class="logo" />
-      <nav>
-        <a href="#about" class="btn">Про нас</a>
-        <a href="#services" class="btn">Послуги</a>
-        <a href="#news" class="btn">Новини</a>
-        <a href="#gallery" class="btn">Галерея</a>
-        <a href="#contact" class="btn">Контакти</a>
-        <a href="#sales" class="btn">Акції</a>
-      </nav>
-      <div style="position: relative;">
-        <a class="phone-diamond btn" id="header-phone">0800-30-47-74</a>
-        <div id="header-tooltip" class="copied-tooltip">Скопійовано!</div>
-      </div>
+      <!-- Логотип ліворуч -->
       <div class="logo">
+        <img src="Tiger logo.png" alt="Логотип ТИГР" />
+      </div>
+  
+      <!-- Навігація і телефон по центру -->
+      <div class="nav-wrapper">
+        <nav>
+          <a href="#about" class="btn">Про нас</a>
+          <a href="#services" class="btn">Послуги</a>
+          <a href="#news" class="btn">Новини</a>
+          <a href="#gallery" class="btn">Галерея</a>
+          <a href="#contact" class="btn">Контакти</a>
+          <a href="#sales" class="btn">Акції</a>
+        </nav>
+        <div style="position: relative;">
+          <a class="phone-diamond btn" id="header-phone">0800-30-47-74</a>
+          <div id="header-tooltip" class="copied-tooltip">Скопійовано!</div>
+        </div>
+      </div>
+  
+      <!-- Кнопка профілю праворуч -->
+      <div class="profile-button">
         <a href="profile.html">
-            <img src="logo profil.png" alt="Профіль користувача">
+          <img src="logo profil.png" alt="Профіль користувача">
         </a>
       </div>
     </div>
