--- a/profile.html
+++ b/profile.html
@@ -26,6 +26,14 @@
       text-align: center;
     }
 
+    .nav-wrapper {
+      display: flex;
+      align-items: center;
+      gap: 20px;
+      flex-grow: 1; /* займає весь простір між логотипом і кнопкою профілю */
+      justify-content: center;
+    }
+
     .tabs {
       display: flex;
       justify-content: center;
