--- a/index.html
+++ b/index.html
@@ -46,6 +46,30 @@
       cursor: pointer;     /* показує, що можна клікнути */
     }
 
+    .profile-button img {
+      width: 40px;
+      height: 40px;
+      border-radius: 50%;
+      cursor: pointer;
+    }
+
+    .profile-container {
+      background-color: #141414;
+      padding: 40px 30px;
+      border-radius: 15px;
+      box-shadow: 0 0 20px rgba(255,0,0,0.6);
+      width: 350px;
+      text-align: center;
+    }
+
+    .nav-wrapper {
+      display: flex;
+      align-items: center;
+      gap: 20px;
+      flex-grow: 1; /* займає весь простір між логотипом і кнопкою профілю */
+      justify-content: center;
+    }
+
 
     .logo {
       height: 40px;
