--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
       display: flex;
       align-items: center;
       justify-content: center;
-      padding: 10px 20px;
+      padding: 10px 0;
       box-sizing: border-box;
       z-index: 1000;
     }
@@ -37,7 +37,7 @@
       justify-content: space-between;
       max-width: 1200px;
       width: 100%;
-      gap: 20px;
+      padding: 0 20px;
     }
 
     .logo img {
@@ -49,7 +49,7 @@
 
     .profile-button {
       margin-left: auto;
-      padding-left: 20px;
+      padding-right: 0;
     }
 
     .profile-button img {
@@ -59,28 +59,13 @@
       cursor: pointer;
     }
 
-    .profile-container {
-      background-color: #141414;
-      padding: 40px 30px;
-      border-radius: 15px;
-      box-shadow: 0 0 20px rgba(255,0,0,0.6);
-      width: 350px;
-      text-align: center;
-    }
-
     .nav-wrapper {
       display: flex;
       align-items: center;
       flex-grow: 1;
       justify-content: center;
-      margin-right: auto;
-    }
-
-    .logo {
-      height: 40px;
-      margin-right: 20px;
-      flex-shrink: 0;
-      user-select: none;
+      margin: 0 auto;
+      max-width: 800px;
     }
 
     nav {
@@ -442,34 +427,6 @@
       padding: 0 20px;
     }
 
-    .services-header {
-      display: flex;
-      align-items: center;
-      justify-content: space-between;
-      flex-wrap: wrap;
-    }
-    
-    .reviews-section .services-header {
-      display: flex;
-      align-items: center;
-      justify-content: space-between;
-    }
-
-    .services-header h2,
-    .reviews-section .services-header h2 {
-      color: red;
-      font-weight: bold;
-      margin: 0;
-    }
-
-    .reviews-section .services-header {
-      justify-content: space-between !important;
-    }
-
-    .services .services-header {
-      justify-content: center !important;
-    }
-
     @media (max-width: 768px) {
       nav {
         flex-wrap: wrap;
@@ -499,7 +456,7 @@
       }
       
       .profile-button {
-        padding-left: 10px;
+        padding-right: 10px;
       }
     }
   </style>
