--- a/profile.html
+++ b/profile.html
@@ -4,6 +4,7 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Профіль користувача</title>
+  <link rel="icon" href="Tiger logo.png" type="image/x-icon">
   <link href="https://fonts.googleapis.com/css2?family=Russo+One&display=swap" rel="stylesheet">
   <style>
     body {
