--- a/profile.html
+++ b/profile.html
@@ -77,6 +77,17 @@
       cursor: pointer;
       text-decoration: underline;
     }
+
+    input {
+      padding: 10px;
+      border-radius: 8px;
+      border: 2px solid #ff1e1e; /* червоне обведення */
+      outline: none;
+      font-size: 1rem;
+      background-color: #1a1a1a; /* темний фон для контрасту */
+      color: white;
+    }
+
   </style>
 </head>
 <body>
