--- a/profile.html
+++ b/profile.html
@@ -86,6 +86,12 @@
       font-size: 1rem;
       background-color: #1a1a1a; /* темний фон для контрасту */
       color: white;
+      box-shadow: 0 0 10px #ff1e1e; /* постійне червоне світіння */
+    }
+    
+    /* Якщо хочеш сильніше світіння під час фокусу */
+    input:focus {
+      box-shadow: 0 0 20px #ff1e1e, 0 0 40px #ff1e1e;
     }
 
   </style>
