--- a/profile.html
+++ b/profile.html
@@ -84,9 +84,9 @@
       border: 2px solid #ff1e1e; /* червоне обведення */
       outline: none;
       font-size: 1rem;
-      background-color: #1a1a1a; /* темний фон для контрасту */
+      background-color: #1a1a1a;
       color: white;
-      box-shadow: 0 0 10px #ff1e1e; /* постійне червоне світіння */
+      box-shadow: 0 0 10px #ff1e1e; /* червоне світіння */
     }
     
     /* Якщо хочеш сильніше світіння під час фокусу */
