--- a/profile.html
+++ b/profile.html
@@ -94,16 +94,11 @@
       box-shadow: 0 0 20px #ff1e1e, 0 0 40px #ff1e1e;
     }
 
-    @keyframes glow {
-      0%, 100% { box-shadow: 0 0 20px #ff1e1e, 0 0 40px #ff1e1e; }
-      50% { box-shadow: 0 0 40px #ff1e1e, 0 0 60px #ff1e1e; }
-    }
-    
     .profile-container {
       padding: 30px;
       border-radius: 15px;
       background-color: #1a1a1a;
-      animation: glow 2s infinite alternate;
+      box-shadow: 0 0 20px #ff1e1e, 0 0 40px #ff1e1e; /* червоне світіння */
     }
 
 
