--- a/profile.html
+++ b/profile.html
@@ -125,7 +125,7 @@
       <input type="email" placeholder="Електронна пошта" required>
       <input type="password" placeholder="Пароль" required>
       <input type="password" placeholder="Підтвердьте пароль" required>
-      <button type="submit">Зареєструватися</button>
+      <button type="submit">Подати заяву на реєстрацію</button>
       <div class="switch-link" id="to-login">Вже маєте акаунт? Увійдіть</div>
     </form>
   </div>
@@ -163,12 +163,12 @@
     // Простий приклад для відправки форм
     loginForm.addEventListener('submit', (e) => {
       e.preventDefault();
-      alert('Успішний вхід (тут має бути реальна логіка)');
+      alert('Успішний вхід');
     });
 
     registerForm.addEventListener('submit', (e) => {
       e.preventDefault();
-      alert('Успішна реєстрація (тут має бути реальна логіка)');
+      alert('Успішна реєстрація');
     });
   </script>
 </body>
