--- a/profile.html
+++ b/profile.html
@@ -101,10 +101,31 @@
       box-shadow: 0 0 20px #ff1e1e, 0 0 40px #ff1e1e; /* червоне світіння */
     }
 
-
+    .back-button {
+      position: fixed;
+      top: 20px;
+      right: 20px;
+      padding: 10px 15px;
+      background-color: #ff1e1e;
+      color: white;
+      border: none;
+      border-radius: 8px;
+      font-weight: bold;
+      cursor: pointer;
+      box-shadow: 0 0 10px #ff1e1e;
+      transition: all 0.3s ease;
+      z-index: 1000;
+    }
+    
+    .back-button:hover {
+      background-color: #cc0000;
+      box-shadow: 0 0 20px #ff1e1e, 0 0 40px #ff1e1e;
+    }
   </style>
 </head>
 <body>
+  <button class="back-button" onclick="history.back()">Назад</button>
+  
   <div class="profile-container">
     <div class="tabs">
       <div class="tab active" id="login-tab">Вхід</div>
